Commit 10/10/2023 workflow file with CICD

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,4 +25,4 @@ job:
         uses: actions/upload-artifact@v3.1.3
         with:
           name: JetpackApp.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: app\build\outputs\apk\debug\app-debug.apk
