--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,7 @@ on:
   push :
     branches: [ master ]
 
-job:
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
@@ -14,12 +14,15 @@ job:
 
       - name: Setup Java JDK
         uses: actions/setup-java@v3.13.0
+        with: 
+          java-version: '17'
+          distribution: 'adopt'
+        
 
       - name: Build with Gradle
         run: ./gradlew build
-        with:
-          java-version: '17'
-          distribution: 'adopt'
+        
+     
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.3
