--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/upload-artifact@v3.1.3
         with:
           name: JetpackApp.apk
-          path: app\build\outputs\apk\debug\app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
 
 
 
